Finished working on redesign (old style)

--- a/cji/css/style.scss
+++ b/cji/css/style.scss
@@ -1,3 +1,71 @@
+#blob0 {
+  top: 0px;
+  left: -150px;
+  animation-delay: .5s;
+}
+#blob1 {
+  top: 200px;
+  left: -150px;
+  animation-delay: 1s;
+}
+#blob2 {
+  top: 650px;
+  left: -150px;
+  animation-delay: 1.5s;
+}
+#blob3 {
+  top: 900px;
+  left: -150px;
+  animation-delay: 2s;
+}
+
+
+#blob4 {
+  top: 0px;
+  right: -150px;
+  animation-delay: 2.5s;
+}
+#blob5 {
+  top: 50px;
+  right: -150px;
+}
+#blob6 {
+  top: 400px;
+  right: -150px;
+}
+#blob7 {
+  top: 700px;
+  right: -150px;
+}
+#blob8 {
+  top: 750px;
+  right: -150px;
+}
+#blob9 {
+  top: 1000px;
+  right: -150px;
+}
+
+
+#blob0, #blob1, #blob2, #blob3 {
+  position: absolute;
+  opacity: 1;
+  left: 0;
+  // -webkit-animation: animateBlobsLeft .5s reverse; /* Safari 4+ */
+  // -moz-animation:    animateBlobsLeft .5s reverse; /* Fx 5+ */
+  // -o-animation:      animateBlobsLeft .5s reverse; /* Opera 12+ */
+  // animation:         animateBlobsLeft .5s reverse; /* IE 10+, Fx 29+ */
+}
+#blob4, #blob5, #blob6, #blob7, #blob8, #blob9 {
+  position: absolute;
+  opacity: 1;
+  right: 0;
+  // -webkit-animation: animateBlobsRight .5s reverse; /* Safari 4+ */
+  // -moz-animation:    animateBlobsRight .5s reverse; /* Fx 5+ */
+  // -o-animation:      animateBlobsRight .5s reverse; /* Opera 12+ */
+  // animation:         animateBlobsRight .5s reverse; /* IE 10+, Fx 29+ */
+}
+
 @import url('http://fonts.googleapis.com/css?family=Short+Stack');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700,900');
 @import url('http://fonts.googleapis.com/css?family=Lato:400,700,900');
@@ -276,7 +344,10 @@ body {
   border-top: 10px solid rgba(255, 255, 255, .7);
   border-bottom: 10px solid rgba(255, 255, 255, .7);
   background: url('../img/section.png');
-
+  .hoofdprijs{
+    float: left;
+    margin-right: 15px;
+  }
   .content {
     background-color: rgba(255,255,255,0.5);
 
@@ -312,12 +383,13 @@ body {
       }
       &.share {
         display: block;
-        margin-bottom: 1.5em;
+        width: 250px;
+        margin: 1.5em auto;
         text-align: center;
         background: none;
 
         img {
-          width: 85%;
+          width: 100%;
           height: auto;
           -webkit-transition: transform .2s ease-in-out;
           transform: scale(.95);
@@ -343,14 +415,14 @@ body {
         width: 100%;
         margin: 2px 0;
         padding: 1em;
-        color: #457866;
+        color: #333;
         border: 0;
       
 
         &[type='file'] {
           width: 100%;
           padding: 1em;
-          color: #84b4a3;
+          color: #333;
           background: #FFF;
         }
       }
@@ -359,7 +431,7 @@ body {
         height: 150px;
         margin-bottom: 2em;
         padding: 1em;
-        color: #457866;
+        color: #333;
         border: 0;
       }
       button {
@@ -381,7 +453,6 @@ body {
         overflow: scroll;
         height: 300px;
         padding: 1em;
-        border: 3px solid #abdbca;
         background: #fff;
       }
       table td:first-child {
@@ -399,7 +470,8 @@ body {
       margin: 2em auto;
       padding: .8em 1em;
       text-align: center;
-      border: 3px solid #84b4a3;
+      border: 3px solid red;
+      background: #FFFFFF;
 
       a {
         color: #000;
@@ -504,12 +576,15 @@ body {
       .wrapper {
         position: relative;
         width: 265px;
-        height: 350px;
+        height: 320px;
+        margin-bottom: 15px;
+        max-width: 100%;
 
         .front {
           z-index: 1;
           display: block;
           width: 100%;
+          height: 100%;
           margin: 0;
           padding: 15px 0;
           background: #fff;
@@ -551,6 +626,7 @@ body {
           top: 0;
           display: none;
           width: 100%;
+          height: 100%;
           padding: 15px 0;
           background: #fff;
 
@@ -631,14 +707,14 @@ body {
   }
 }
 #comments{
-  .container{
-    background-color: #FFF;
-    h2 {
-      font-family: 'nilland-blackregular';
-      font-size: 2em;
-      font-weight: 900;
-      margin: 1em 0;
-    }
+  background-color: #FFF;
+  max-width: 700px;
+  margin: 20px auto;
+  padding: 15px;
+  h2 {
+    font-family: 'nilland-blackregular';
+    font-size: 2em;
+    margin: 1em 0;
   }
 }
 #footer {
@@ -677,39 +753,11 @@ body {
     }
   }
 }
-#blob0 {
-  top: 100px;
-  left: -150px;
-}
-#blob1 {
-  top: 300px;
-  left: -150px;
-}
-#blob2 {
-  top: 600px;
-  left: -150px;
-}
-#blob3 {
-  top: 100px;
-  right: -150px;
-}
-#blob4 {
-  top: 300px;
-  right: -150px;
-}
-#blob5 {
-  top: 600px;
-  right: -150px;
-}
-#blob0, #blob1, #blob2, #blob3, #blob4, #blob5 {
-  position: absolute;
-  opacity: 0;
-}
 #flash .flasherror {
   border: 3px solid red;
   background: rgba(255, 0, 0, .5);
 }
-@media all and (min-width:0) and (max-width:480px) {
+@media all and (min-width:0) and (max-width:767px) {
   .navbar{
     z-index: 99;
     position: fixed;
@@ -757,7 +805,12 @@ body {
     }
   }
 }
-@media all and (max-width:1200px) {
+@media all and (max-width: 1200px) {
+  #content .hoofdprijs {
+    float: none;
+  }
+}
+@media all and (max-width: 1200px) {
   #blob0, #blob1, #blob2, #blob3, #blob4, #blob5, #blob6, #blob7, #blob8, #blob9, #blob10, #blob11 {
     display: none;
   }
