--- a/sites/all/themes/opknappertje/css/view-filters.css
+++ b/sites/all/themes/opknappertje/css/view-filters.css
@@ -1,45 +1,32 @@
 .view-filters {
-  display: block;
-  width: 100%;
-}
-.view-content {
-  clear: both;
-}
-
-.views-exposed-form {
-  margin-bottom: 1em;
-  text-align: right;
-  float: right;
-}
-.views-exposed-form label {
-  display: inline-block;
-  font-weight: 700;
-  margin: 0 15px;
-  color: #fff;
-  font-size: 1.1em;
-  font-family: 'axure_handwritingregular';
-}
-.views-exposed-form select {
-  font-size: 1.1em;
-  display: inline-block;
   width: auto;
-  min-width: 140px;
-  padding: .8em 1em;
-  text-align: left;
-  color: #fff;
-  text-transform: uppercase;
-  font-family: 'axure_handwritingregular';
-  border: 1px solid #f10022;
-  background: -webkit-linear-gradient(#f10022, #c7001c);
-  background: -o-linear-gradient(#f10022, #c7001c);
-  background: -moz-linear-gradient(#f10022, #c7001c);
-  background: linear-gradient(#f10022, #c7001c);
+  margin: 0 auto;
+  margin-top: 3em;
+  padding-bottom: 15px;
+  text-align: center;
 }
-.views-exposed-form select:hover {
-  border: 1px solid #f10022;
-  text-decoration: none;
-  background: -webkit-linear-gradient(#f10022, #f10022);
-  background: -o-linear-gradient(#f10022, #f10022);
-  background: -moz-linear-gradient(#f10022, #f10022);
-  background: linear-gradient(#f10022, #f10022);
+.view-filters span {
+  color: white;
+  font-weight: bold;
+  font-family: 'axure_handwritingregular';
+  display: block;
+  width: 150px;
+  margin: 15px auto;
+}
+.view-filters .btn {
+  display: inline-block;
+  margin: 0 15px 15px;
+  font-size: 1em;
+  padding: .5em 1em;
+  width: 150px;
+}
+.view-filters .btn.active:active,
+.view-filters .btn.active:focus {
+  outline: 0;
+}
+.view-filters .btn.active {
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+}
+.grid {
+  clear: both;
 }
