Work on validation and creation limits

--- a/sites/all/themes/opknappertje/css/campaign-overview.css
+++ b/sites/all/themes/opknappertje/css/campaign-overview.css
@@ -41,3 +41,10 @@
   font-weight: 700;
   font-size: 2em;
 }
+
+.campaign.inactive .date .month {
+  background: gray;
+}
+.campaign.inactive .date .day {
+  color: gray;
+}
