--- a/sites/all/themes/opknappertje/css/navbar.css
+++ b/sites/all/themes/opknappertje/css/navbar.css
@@ -8,6 +8,10 @@
   padding: 5px 0 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.75);
 }
+.navbar-inverse {
+  background-color: transparent;
+  background: url('../img/dark-grungewall.png');
+}
 .navbar-header .logo img{
   margin-top: 5px;
   margin-left: 10px;
