--- a/sites/all/themes/opknappertje/css/block.css
+++ b/sites/all/themes/opknappertje/css/block.css
@@ -8,6 +8,9 @@
   color: white;
   margin-bottom: .5em;
 }
+.block-opknappertje h2 {
+  color: white;
+}
 .block-opknappertje h1 small{
   font-size: 23px;
   color: white;
