--- a/sites/all/themes/opknappertje/css/layout.css
+++ b/sites/all/themes/opknappertje/css/layout.css
@@ -27,9 +27,8 @@ body {
   color: black;
 }
 
-.nav-tabs {
-    display: none;
-    margin-bottom: 0px;
+.tabs--primary.nav-tabs {
+  display: none;
 }
 
 .footer {
