--- a/sites/all/themes/opknappertje/css/block.css
+++ b/sites/all/themes/opknappertje/css/block.css
@@ -1,3 +1,36 @@
+#block-views-votes-block {
+  max-width: 970px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 2em 0;
+}
+#block-views-votes-block .views-row {
+  display: inline-block;
+  margin: 5px;
+  position: relative;
+}
+#block-views-votes-block img {
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  border: 7px solid white;
+}
+
+#block-views-votes-block .views-field-picture:hover + .views-field-name {
+  display: block;
+}
+#block-views-votes-block .views-field-name {
+  width: 100%;
+  text-align: center;
+  border-radius: 5px;
+  position: absolute;
+  top: -35px;
+  background: white;
+  padding: 5px 10px;
+  color: black;
+  display: none;
+}
 .block-opknappertje {
   padding: 3em 0;
   text-align: center;
