--- a/sites/all/themes/opknappertje/css/style.css
+++ b/sites/all/themes/opknappertje/css/style.css
@@ -1,5 +1,6 @@
 @import url('layout.css');
 @import url('blobs.css');
+@import url('footer.css');
 @import url('fonts.css');
 @import url('typography.css');
 @import url('buttons.css');
