--- a/sites/all/themes/opknappertje/css/layout.css
+++ b/sites/all/themes/opknappertje/css/layout.css
@@ -10,11 +10,14 @@
   background: url('../img/section.png');
 }
 
+.hybridauth-widget-wrapper,
 .region-content {
   background: rgba(255,255,255,0.8);
   padding: 1em;
 }
-
+.hybridauth-widget-wrapper {
+  padding-top: 0;
+}
 .region-content p {
   color: black;
 }
