--- a/sites/all/themes/opknappertje/css/block.css
+++ b/sites/all/themes/opknappertje/css/block.css
@@ -1,5 +1,5 @@
 .hybridauth-widget-wrapper {
-  background: white;
+  background: rgba(255,255,255,0.8);
 }
 #block-views-votes-vote-users {
   max-width: 970px;
