--- a/sites/all/themes/custom/opknappertje/css/src/project/footer.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/footer.scss
@@ -3,7 +3,7 @@
   background: url(../img/dark-grungewall.png);
   border: 0;
   padding: 1em 0;
-  margin-top: 10em;
+  margin-top: 750px;
 }
 .footer ul {
   margin: 0;
