--- a/sites/all/themes/custom/opknappertje/jade/index.jade
+++ b/sites/all/themes/custom/opknappertje/jade/index.jade
@@ -13,18 +13,11 @@ html(lang="en")
 
       #index-banner.section
         .container
-          br
-          br
-          br
           .center
             p
               :markdown
-                **A modern responsive Drupal theme for Open Social.**
-                
-                This theme is built upon [Drupal bootstrap](https://www.drupal.org/project/bootstrap) and makes use of [Material Design principles](https://www.google.com/design/spec/material-design/introduction.html).
-                
-                We are currently working on the alpha release which in planned for the end of June.
-
+                **A modern responsive Drupal theme.**
+                This theme is built upon [Drupal bootstrap](https://www.drupal.org/project/bootstrap).
   
     include ./layout/_scripts.jade
     
@@ -34,18 +27,18 @@ html(lang="en")
           .row
             .col-xs-12
               .commit
-                span.hidden-mobile Latest commit on Github by &nbsp; &nbsp; 
+                span.hidden-mobile Latest commit on Bitbucket by &nbsp; &nbsp; 
                 a.sha.hidden-mobile(href='')
                 span.hidden-mobile -&nbsp;
                 span.date.hidden-mobile
-                a#github-button.btn.btn-flat.pull-right.waves-effect.waves-light(href='https://github.com/goalgorilla/drupal_social/tree/gh-pages') View repository
+                a#github-button.btn.btn-flat.pull-right.waves-effect.waves-light(href='https://bitbucket.com/peterpolman/OPK') View repository
       .container
         .row
           .col-xs-12.col-sm-8
             h5.white-text Contribute
-            p.grey-text.text-lighten-4 Do you want to join us in this effort? We are welcoming your feedback, (development) time and/or financial support. For <a href="https://www.drupal.org/project/issues/social" class="social-blue-text text-lighten-4"> feedback we will use D.O</a> for other questions or suggestions please <a href="mailto:taco@goalgorilla.com" class="social-blue-text text-lighten-4">contact us</a>.
+            p Content
             p 
-              a.btn.btn-default(href='https://github.com/goalgorilla/drupal_social/wiki/Contributing-to-Open-Social') Read more
+              a.btn.btn-default(href='#') Read more
             
           .col-xs-12.col-sm-3.col-sm-push-1
             h5.white-text Connect
@@ -58,4 +51,4 @@ html(lang="en")
                 a.white-text(href='#') item
       .footer-copyright
         .container 
-          a(href='http://www.goalgorilla.com') 
+          a(href='http://www.peterpolman.nl') 
