--- a/sites/all/themes/custom/opknappertje/css/src/project/navbar.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/navbar.scss
@@ -34,6 +34,7 @@ body.toolbar .navbar-fixed-top {
 }
 .navbar-nav {
   margin: 0;
+  float: left;
   @include MQ($small) {
     float: right !important;
     clear: right;
