Facebook comments and fixes

--- a/sites/all/themes/custom/opknappertje/css/src/project/block.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/block.scss
@@ -152,3 +152,12 @@
 #block-views-contribution-latest .block-title {
   margin: 2em 0 1em;
 }
+
+
+#block-opknappertje-facebook-comments-content .fb-comments {
+  margin-top: 1em;
+
+  iframe {
+    background: white;
+  }
+}
