--- a/sites/all/themes/custom/opknappertje/css/src/project/layout.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/layout.scss
@@ -5,6 +5,7 @@
 }
 
 .main-container {
+  padding: 1em 0;
   border-top: 10px solid rgba(255, 255, 255, 0.7);
   border-bottom: 10px solid rgba(255, 255, 255, 0.7);
   background: url('../img/section.png');
