--- a/sites/all/themes/custom/opknappertje/css/src/project.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project.scss
@@ -7,6 +7,7 @@
 @import "project/variables"; // should use the project/variables when available
 @import "bootstrap/mixins";
 @import "project/mixins";
+@import "project/mixins/transform";
 
 //
 // Reset and dependencies
