--- a/sites/all/themes/custom/opknappertje/css/src/project/block.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/block.scss
@@ -1,3 +1,150 @@
+#block-opknappertje-hero-block-campaign-countdown {
+
+  .block-title {
+    background: url(../img/dark-grungewall.png);
+    padding: .5em 0;
+    text-align: center;
+    margin: 0;
+  }
+
+  .count-title {
+    display: block;
+    margin-bottom: 15px;
+    font-size: 1em;
+    color: #1a1a1a;
+    text-transform: uppercase;
+  }
+
+  // Countdown
+  .countdown-days,
+  .countdown {
+    background: white;
+    padding: 25px 5px;
+    width: 100%;
+    margin: 0;
+
+    &:after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+  }
+
+    .bloc-time {
+      float: left;
+      margin-right: 15px;
+      text-align: center;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    .figure {
+      position: relative;
+      float: left;
+      height: 55px;
+      width: 50px;
+      margin-right: 5px;
+      background-color: black;
+      border-radius: 8px;
+      @include box-shadow(0 3px 4px 0 rgba(0, 0, 0, .2),inset 2px 4px 0 0 rgba(255, 255, 255, .08));
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      >span {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        font: normal 2.5em/50px 'Arial Black';
+        font-weight: 700;
+        color: white;
+      }
+
+      .top, .bottom-back {
+        &:after {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 100%;
+          border-bottom: 1px solid rgba(0, 0, 0, .1);
+        }
+      }
+
+      .top {
+        z-index: 3;
+        background-color: black;
+        transform-origin: 50% 100%;
+        -webkit-transform-origin: 50% 100%;
+        @include border-top-radius(10px);
+        @include transform(perspective(200px));
+      }
+
+      .bottom {
+        z-index: 1;
+
+        &:before {
+          content: "";
+          position: absolute;
+          display: block;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 50%;
+          background-color: rgba(0, 0, 0, .02);
+        }
+      }
+
+      .bottom-back {
+        z-index: 2;
+        top: 0;
+        height: 50%;
+        overflow: hidden;
+        background-color: black;
+        @include border-top-radius(10px);
+
+        span {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+      }
+
+      .top, .top-back {
+        height: 50%;
+        overflow: hidden;
+        @include backface-visibility(hidden);
+      }
+
+      .top-back {
+        z-index: 4;
+        bottom: 0;
+        background-color: black;
+        -webkit-transform-origin: 50% 0;
+        transform-origin: 50% 0;
+        @include transform(perspective(200px) rotateX(180deg));
+        @include border-bottom-radius(10px);
+
+        span {
+          position: absolute;
+          top: -100%;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+      }
+    }
+
+}
+
 #edit-locale {
   display: none;
 }
