Added new countdown

--- a/sites/all/themes/custom/opknappertje/css/src/project/_mixins.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/_mixins.scss
@@ -45,10 +45,10 @@
   }
 }
 
-@import "mixins/card";
-@import "mixins/border-radius";
-@import "mixins/breakpoints";
+// @import "mixins/card";
+// @import "mixins/border-radius";
+// @import "mixins/breakpoints";
 @import "mixins/elevation";
-@import "mixins/grid-framework";
-@import "mixins/grid";
-@import "mixins/style-variant";
+// @import "mixins/grid-framework";
+// @import "mixins/grid";
+// @import "mixins/style-variant";
