Latest changes after live.

--- a/sites/all/themes/custom/opknappertje/css/src/project/_tile.scss
+++ b/sites/all/themes/custom/opknappertje/css/src/project/_tile.scss
@@ -11,7 +11,7 @@
   display: inline-block;
   float: left;
   background: white;
-  font-family: 'Nilland';
+  font-family: 'nillandregular';
   position: relative;
 
   @include MQ($screen-sm) {
